# postcard

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ci.sh
bench/nrf52/dwm1001/: Cargo.toml  debug.gdb
bench/nrf52/dwm1001/.cargo/: config
bench/nrf52/dwm1001/src/: main.rs
benches/: byte_array.rs
examples/: manish.rs
postcard-derive/: Cargo.toml
postcard-derive/src/: all_fields_with.rs  lib.rs  max_size.rs  schema.rs
source/postcard/: Cargo.toml
source/postcard-c/: example.c  postcard.h
source/postcard-core/: Cargo.toml  README.md
source/postcard-core/src/: de.rs  lib.rs  ser.rs  varint.rs
source/postcard-derive/: Cargo.toml
source/postcard-derive-ng/: Cargo.toml
source/postcard-derive-ng/src/: max_size.rs  schema.rs
source/postcard-derive/src/: lib.rs  schema.rs
source/postcard-dyn/: Cargo.toml
source/postcard-dyn-ng/: Cargo.toml
source/postcard-dyn-ng/src/: de.rs  ser.rs
source/postcard-dyn/src/: de.rs  error.rs  lib.rs  reserialize.rs  ser.rs
source/postcard-dyn/src/reserialize/: expecting.rs  lossless.rs  lossy.rs  map.rs  option.rs  seq.rs  strategy.rs  tuple.rs
source/postcard-dyn/src/reserialize/lossless/: enums.rs  interned.rs  structs.rs  tuples.rs
source/postcard-dyn/src/reserialize/lossy/: enums.rs  structs.rs
source/postcard-dyn/src/snapshots/: postcard_dyn__de__test__insta_Enum1.snap  postcard_dyn__de__test__insta_Struct1.snap  postcard_dyn__de__test__insta_TupStruct1.snap  postcard_dyn__de__test__insta_TupStruct2.snap  postcard_dyn__de__test__insta_UnitStruct.snap  postcard_dyn__ser__test__insta_Enum1.snap  postcard_dyn__ser__test__insta_Struct1.snap  postcard_dyn__ser__test__insta_TupStruct1.snap  postcard_dyn__ser__test__insta_TupStruct2.snap  postcard_dyn__ser__test__insta_UnitStruct.snap
source/postcard-schema/: Cargo.toml
source/postcard-schema-ng/: Cargo.toml  README.md
source/postcard-schema-ng/src/: lib.rs
source/postcard-schema-ng/src/impls/: builtins_alloc.rs  builtins_nostd.rs  builtins_std.rs  bytes_v1_0.rs  fixed_v1_0.rs  heapless_v0_7.rs  heapless_v0_8.rs  heapless_v0_9.rs  indexmap_v2_0.rs  insta.rs  log_v0_4.rs  mod.rs  nalgebra_v0_33.rs  nalgebra_v0_34.rs  num_complex_v0_4.rs  serde_big_array_v0_5.rs  uuid_v1_0.rs
source/postcard-schema-ng/src/key/: hash.rs  mod.rs
source/postcard-schema-ng/src/schema/: fmt.rs  intern.rs  mod.rs  owned.rs
source/postcard-schema-ng/tests/: schema.rs
source/postcard-schema-ng/tests/impls/: bytes_v1_0.rs  log_v0_4.rs  main.rs
source/postcard-schema-ng/tests/snapshots/: schema__postcard_snapshot_Inner.snap  schema__postcard_snapshot_Outer.snap  schema__postcard_snapshot_Slice.snap
source/postcard-schema/src/: const_helpers.rs  lib.rs  max_size.rs  schema.rs  schema_tys.rs
source/postcard-schema/src/impls/: builtins_alloc.rs  builtins_nostd.rs  builtins_std.rs  bytes_v1_0.rs  chrono_v0_4.rs  fixed_v1_0.rs  heapless_v0_7.rs  heapless_v0_8.rs  heapless_v0_9.rs  indexmap_v2_0.rs  log_v0_4.rs  mod.rs  nalgebra_v0_33.rs  nalgebra_v0_34.rs  num_complex_v0_4.rs  serde_big_array_v0_5.rs  uom_v0_37.rs  uuid_v1_0.rs
source/postcard-schema/src/key/: hash.rs  mod.rs
source/postcard-schema/src/schema/: fmt.rs  mod.rs  owned.rs
source/postcard-schema/src/snapshots/: postcard_schema__tests__insta_Point.snap
source/postcard-schema/tests/: max_size.rs  schema.rs
source/postcard-schema/tests/impls/: indexmap_v2_0.rs  main.rs
source/postcard-schema/tests/snapshots/: schema__insta_Classic.snap  schema__insta_Enums.snap  schema__insta_Inner.snap  schema__insta_NewTypeStruct.snap  schema__insta_TestEnum2.snap  schema__insta_TestStruct1.snap  schema__insta_TestStruct3.snap  schema__insta_TestStruct4.snap  schema__insta_TupStruct.snap  schema__insta_UnitStruct.snap  schema__postcard_snapshot_Outer.snap  schema__postcard_snapshot_Slice.snap
source/postcard/benches/: varint_bench.rs
source/postcard/src/: accumulator.rs  error.rs  fixint.rs  lib.rs  max_size.rs  schema.rs  varint.rs
source/postcard/src/de/: deserializer.rs  flavors.rs  mod.rs  spanned.rs
source/postcard/src/ser/: flavors.rs  mod.rs  serializer.rs
source/postcard/tests/: loopback.rs  schema.rs  skiped_fields.rs
source/postcard2/: Cargo.toml  README.md
source/postcard2-eio/: Cargo.toml  README.md
source/postcard2-eio/src/: lib.rs  v0_7.rs
source/postcard2-heapless/: Cargo.toml  README.md
source/postcard2-heapless/src/: lib.rs  v0_9.rs
source/postcard2/src/: accumulator.rs  error.rs  fixint.rs  lib.rs  max_size.rs  varint.rs
source/postcard2/src/de/: deserializer.rs  flavors.rs  mod.rs
source/postcard2/src/ser/: flavors.rs  mod.rs  serializer.rs
source/postcard2/tests/: accumulator.rs  crc.rs  loopback.rs  max_size.rs
spec/: LICENSE-CC-BY-SA  book.toml
spec/src/: SUMMARY.md  glossary.md  intro.md  serde-data-model.md  wire-format.md
src/: accumulator.rs  byte_array.rs  de.rs  eio.rs  error.rs  fixint.rs  lib.rs  max_size.rs  schema.rs  ser.rs  varint.rs  wrapper.rs
src/de/: deserializer.rs  flavors.rs  mod.rs
src/ser/: flavor.rs  flavors.rs  max_size.rs  mod.rs  serializer.rs  size.rs  storage.rs
tests/: accumulator.rs  crc.rs  loopback.rs  max_size.rs  schema.rs
