[package]
name = "postcard-dyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.10", features = ["use-std"] }
postcard-schema = { version = "0.1", features = ["use-std", "derive"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
