[workspace]
resolver = '2'
members = [
    "source/postcard",
    "source/postcard-derive",
    "source/postcard-derive-ng",
    "source/postcard-dyn",
    "source/postcard-dyn-ng",
    "source/postcard-schema",
    "source/postcard-schema-ng",
    "source/postcard2",

    # TODO: re-enable
    # "source/postcard2-eio",
    # "source/postcard2-heapless",
]
