[package]
name = "postcard-derive"
version = "0.2.1"
authors = [
    "Lachlan Sneff <lachlan.sneff@gmail.com>",
    "James Munns <james@onevariable.com>",
]
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/jamesmunns/postcard"
description = "A no_std + serde compatible message library for Rust - Derive Crate"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
    "cobs",
    "framing",
]
documentation = "https://docs.rs/postcard-derive/"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
