[package]
name = "postcard-dyn"
version = "0.2.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
repository = "https://github.com/jamesmunns/postcard"
description = "Dynamic ser/de for postcard"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
    "cobs",
    "framing",
]
documentation = "https://docs.rs/postcard-dyn/"


[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.postcard]
version = "1.0.10"
features = ["use-std"]
path = "../postcard"

[dependencies.postcard-schema]
version = "0.2"
features = ["use-std", "derive"]
path = "../postcard-schema"
