[package]
name = "postcard-schema"
version = "0.2.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jamesmunns/postcard"
description = "Reflection-like schemas for postcard types"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
]
documentation = "https://docs.rs/postcard-schema/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dependencies.serde]
version = "1.0"
default-features = false
# todo: remove this?
features = ["derive"]

[dependencies.uuid_v1_0]
package = "uuid"
version = "1.0"
default-features = false
optional = true

[dependencies.chrono_v0_4]
package = "chrono"
version = "0.4"
default-features = false
optional = true

[dependencies.heapless_v0_7]
package = "heapless"
version = "0.7"
default-features = false
optional = true

[dependencies.heapless_v0_8]
package = "heapless"
version = "0.8"
default-features = false
optional = true

[dependencies.nalgebra_v0_33]
package = "nalgebra"
version = "0.33.0"
optional = true
default-features = false

[dependencies.postcard-derive]
path = "../postcard-derive"
version = "0.2.0"
optional = true

[dev-dependencies.postcard]
path = "../postcard"
version = "1.0"
features = ["use-std"]

[dev-dependencies.nalgebra_v0_33]
package = "nalgebra"
version = "0.33.0"
default-features = false
features = ["serde-serialize-no-std"]

[features]
default = []
use-std = ["serde/std"]
alloc = ["serde/alloc"]
derive = ["postcard-derive"]

uuid-v1_0 = ["uuid_v1_0"]
chrono-v0_4 = ["chrono_v0_4"]
heapless-v0_7 = ["heapless_v0_7"]
heapless-v0_8 = ["heapless_v0_8"]
nalgebra-v0_33 = ["nalgebra_v0_33"]
