[package]
name = "postcard2-eio"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard2 = { version = "0.1.0", path = "../postcard2", default-features = false }
serde_core = { version = "1.0.228", default-features = false }

[dependencies.embedded_io_v0_7]
package = "embedded-io"
version = "0.7.1"
optional = true

[features]
embedded-io-v0_7 = ["embedded_io_v0_7"]
