[package]
name = "postcard2-eio"
version = "0.2.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jamesmunns/postcard"
description = "postcard2 extensions crate"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
]
documentation = "https://docs.rs/postcarde-eio/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
postcard2 = { version = "0.2.0", path = "../postcard2", default-features = false }
serde_core = { version = "1.0.228", default-features = false }

[dependencies.embedded_io_v0_7]
package = "embedded-io"
version = "0.7.1"
optional = true

[features]
embedded-io-v0_7 = ["embedded_io_v0_7"]
