[package]
name = "postcard2-heapless"
version = "0.1.0"
edition = "2024"

[dependencies]
postcard2 = { version = "0.1.0", path = "../postcard2", default-features = false }
serde_core = { version = "1.0.228", default-features = false }

[dependencies.heapless_v0_9]
package = "heapless"
version = "0.9.1"
optional = true
default-features = false
features = ["serde"]

[features]
heapless-v0_9 = ["heapless_v0_9"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
