[package]
name = "postcard2-heapless"
version = "0.2.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2024"
readme = "README.md"
repository = "https://github.com/jamesmunns/postcard"
description = "postcard2 extension crate"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
]
documentation = "https://docs.rs/postcard2-heapless/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
postcard2 = { version = "0.2.0", path = "../postcard2", default-features = false }
serde_core = { version = "1.0.228", default-features = false }

[dependencies.heapless_v0_9]
package = "heapless"
version = "0.9.1"
optional = true
default-features = false
features = ["serde"]

[features]
heapless-v0_9 = ["heapless_v0_9"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
