[package]
name = "postcard2"
version = "0.1.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jamesmunns/postcard"
description = "A no_std + serde compatible message library for Rust"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
    "cobs",
    "framing",
]
documentation = "https://docs.rs/postcard/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dependencies.heapless]
version = "0.7.0"
default-features = false
features = ["serde"]
optional = true

[dependencies.serde]
version = "1.0.100"
default-features = false
features = ["derive"]

[dependencies.cobs]
version = "0.3.0"
default-features = false

[dependencies.defmt]
version = "1"
optional = true

[dependencies.postcard-derive-ng]
version = "0.3.0"
optional = true
path = "../postcard-derive-ng"

[dependencies.crc]
version = "3.0.1"
optional = true

[dependencies.nalgebra_v0_33]
package = "nalgebra"
version = "0.33.0"
optional = true
default-features = false

[features]
default = ["heapless-cas"]

std = ["serde/std", "alloc"]
heapless-cas = ["heapless", "dep:heapless", "heapless/cas"]
alloc = ["serde/alloc"]
use-defmt = ["defmt"]
use-crc = ["crc"]

# Does nothing, for compat only
paste = []

# Experimental features!
#
# NOT subject to SemVer guarantees!
experimental-derive = ["postcard-derive-ng"]
core-num-saturating = []
nalgebra-v0_33 = ["nalgebra_v0_33"]
crc = ["dep:crc"]
defmt = ["dep:defmt"]
heapless = ["dep:heapless"]
postcard-derive-ng = ["dep:postcard-derive-ng"]
