[package]
name = "postcard2"
version = "0.1.0"
authors = ["James Munns <james@onevariable.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/jamesmunns/postcard"
description = "A no_std + serde compatible message library for Rust"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "serde",
]
documentation = "https://docs.rs/postcard/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

# todo: make this versioned, optional?
[dependencies.serde_core]
version = "1.0.228"
default-features = false

[dependencies.defmt]
version = "1"
optional = true

[dependencies.postcard-derive-ng]
version = "0.3.0"
optional = true
path = "../postcard-derive-ng"

[dependencies.serde_derive]
version = "1.0.228"
optional = true
default-features = false

[dependencies.serde]
version = "1.0.228"
default-features = false
optional = true

[features]
default = []
std = []
alloc = []

# TODO: version these deps?
use-defmt = ["defmt"]
defmt = ["dep:defmt"]
serde-derive = ["serde_derive", "serde"]

# Experimental features!
#
# NOT subject to SemVer guarantees!

# TODO: do we still need these in the main crate?
# We almost certainly shouldn't until there is a 1.0 version of these deps.

# experimental-derive = ["postcard-derive-ng"]
# postcard-derive-ng = ["dep:postcard-derive-ng"]
